--- a/.github/workflows/merge-mkdocs.yml
+++ b/.github/workflows/merge-mkdocs.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material==8.5.3
+      - run: pip install mkdocs-material
       - run: mkdocs gh-deploy --force
         working-directory: ./site
