--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -303,6 +303,7 @@ nav:
   - Releases:
       - Overview: release-notes/overview.md
       - Monthly News:
+        - January 2023: release-notes/january-2023.md
         - November 2022: release-notes/november-2022.md
         - October 2022: release-notes/october-2022.md
       - Core Egeria:
