--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -303,6 +303,7 @@ nav:
   - Releases:
       - Overview: release-notes/overview.md
       - Monthly News:
+        - February 2023: release-notes/february-2023.md
         - January 2023: release-notes/january-2023.md
         - November 2022: release-notes/november-2022.md
         - October 2022: release-notes/october-2022.md
@@ -418,6 +419,7 @@ nav:
               - Governance Engines: types/4/0461-Governance-Engines.md
               - Governance Action Types: types/4/0462-Governance-Action-Types.md
               - Governance Actions: types/4/0463-Governance-Actions.md
+              - Dynamic Integration Groups: types/4/0464-Dynamic-Integration-Groups.md
               - Duplicate Processing: types/4/0465-Duplicate-Processing.md
               - Incident Reporting: types/4/0470-Incident-Reporting.md
               - Licenses: types/4/0481-Licenses.md
