--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -690,6 +690,7 @@ nav:
       - Integration Connector: concepts/integration-connector.md
       - Integration Daemon: concepts/integration-daemon.md
       - Integration Group: concepts/integration-group.md
+      - Integration Report: concepts/integration-report.md
       - IsPublic: concepts/is-public.md
       - Javadoc: concepts/javadoc.md
       - Karma Point: concepts/karma-point.md
