--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -288,6 +288,8 @@ nav:
                       - Egeria Charts Release process: guides/contributor/release-process/egeria-charts-release.md
                       - Egeria Release Notes Release process: guides/contributor/release-process/egeria-docs-release.md
                       - XTDB Connector Release Process: guides/contributor/release-process/egeria-connector-xtdb-release.md
+                      - Maven Publishing reference: guides/contributor/release-process/maven-publish.md
+                      - GitHub Secrets reference: guides/contributor/release-process/secrets.md
               - Specific Guidance:
                   - Programming Languages: guides/contributor/languages.md
                   - Tools:
