--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -32,7 +32,7 @@ nav:
           - Preparing Metadata Ecosystem:
               - Metadata Valid Values: guides/planning/valid-values/overview.md
               - Language Translations: guides/planning/translations/overview.md
-              - Onboarding Organization: guides/planning/organization/overview.md
+              - On-boarding Organization: guides/planning/organization/overview.md
               - Governance Program: guides/planning/governance-program/overview.md
       - Integration:
           - Integration Guide:
@@ -220,7 +220,6 @@ nav:
           - Egeria Contributor Day : education/egeria-dojo/egeria-contributor.md
           - Egeria in Production Day : education/egeria-dojo/egeria-in-production.md
       - Open Metadata Labs: education/open-metadata-labs/overview.md
-      - Webinars: education/webinar-program/overview.md
       - Tutorials:
           - Git and GitHub: education/tutorials/git-and-git-hub-tutorial/overview.md
           - Using Kubernetes: guides/operations/kubernetes/index.md
@@ -234,9 +233,12 @@ nav:
           - Running OMAG Servers: education/tutorials/omag-server-tutorial/overview.md
           - Running Samples: education/tutorials/running-samples-tutorial.md
           - Testing Egeria: education/tutorials/testing-egeria-tutorial.md
+      - Comparisons:
+          - Apache Atlas: education/comparisons/apache-atlas.md
       - Scenarios:
           - Data Manager Integration: scenarios/data-manager-integration/overview.md
           - File Lineage: scenarios/file-lineage/overview.md
+      - Webinars: education/webinar-program/overview.md
       - Old Dojo (deprecated):
             - Dojo Introduction: getting-started/dojo/index.md
             - Day 1:
@@ -807,7 +809,7 @@ nav:
               - Reggie Mint: practices/coco-pharmaceuticals/personas/reggie-mint.md
               - Robbie Records: practices/coco-pharmaceuticals/personas/robbie-records.md
               - Sally Counter: practices/coco-pharmaceuticals/personas/sally-counter.md
-              - Signey Seeker: practices/coco-pharmaceuticals/personas/sidney-seeker.md
+              - Sidney Seeker: practices/coco-pharmaceuticals/personas/sidney-seeker.md
               - Stew Faster: practices/coco-pharmaceuticals/personas/stew-faster.md
               - Tanya Tidie: practices/coco-pharmaceuticals/personas/tanya-tidie.md
               - Tessa Tube: practices/coco-pharmaceuticals/personas/tessa-tube.md
