Remove @planetf1 from code ownership / PR creation
Signed-off-by: Nigel Jones <nigel.l.jones+git@gmail.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -24,21 +24,21 @@ site/docs/connectors/repository/ibm-information-server/ @cmgrote
 site/docs/frameworks/ @mandy-chessell
 
 site/docs/education/egeria-dojo @davidradl
-site/docs/education/egeria-dojo/running-egeria/ @planetf1
+site/docs/education/egeria-dojo/running-egeria/ @mandy-chessell
 site/docs/education/egeria-dojo/developer/ @mandy-chessell
 
 site/docs/getting-started/ @mandy-chessell
-site/docs/getting-started/hands-on-lab/ @mandy-chessell @planetf1
+site/docs/getting-started/hands-on-lab/ @mandy-chessell 
 
 site/docs/guides/ @mandy-chessell
-site/docs/guides/developer/ @mandy-chessell @planetf1
+site/docs/guides/developer/ @mandy-chessell 
 site/docs/guides/cts/ @cmgrote
 
 site/docs/introduction/ @mandy-chessell
 
-site/docs/operations/kubernetes/ @planetf1
+site/docs/operations/kubernetes/ @mandy-chessell
 
-site/docs/release-notes/ @mandy-chessell @planetf1
+site/docs/release-notes/ @mandy-chessell 
 
 site/docs/services/ @mandy-chessell
 
@@ -60,6 +60,6 @@ site/docs/services/omvs/ @davidradl
 
 site/docs/types/ @mandy-chessell
 
-site/docs/tutorials/docker-tutorial /  @planetf1
-site/docs/tutorials/open-metadata-labs/ @planetf1
-site/docs/tutorials/postman-tutorial / @mandy-chessell @planetf1
+site/docs/tutorials/docker-tutorial /  @mandy-chessell
+site/docs/tutorials/open-metadata-labs/ @mandy-chessell
+site/docs/tutorials/postman-tutorial / @mandy-chessell 
