Add August newsletter
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -797,7 +797,7 @@ nav:
               - Gary Geeke: practices/coco-pharmaceuticals/personas/gary-geeke.md
               - George Pie: practices/coco-pharmaceuticals/personas/george-pie.md
               - Grant Able: practices/coco-pharmaceuticals/personas/grant-able.md
-              - harry Hopeful: practices/coco-pharmaceuticals/personas/harry-hopeful.md
+              - Harry Hopeful: practices/coco-pharmaceuticals/personas/harry-hopeful.md
               - Ivor Padlock: practices/coco-pharmaceuticals/personas/ivor-padlock.md
               - Jules Keeper: practices/coco-pharmaceuticals/personas/jules-keeper.md
               - Julie Stitched: practices/coco-pharmaceuticals/personas/julie-stitched.md
